fix overflow

--- a/score.css
+++ b/score.css
@@ -8,19 +8,18 @@
     max-width:100%;
     max-width:500px;
 }
+.overflow{
+    background: #111111;
+    margin-bottom:100px;
+    overflow-y:scroll;
+}
 
 .scoreboardList{
-    background: #111111;
     width: 100%;
     height: 500px;
-    overflow-y:scroll;
     border: none;
-    margin-bottom:100px;
     border-radius:20px;
-    display:flex;
-    flex-direction: column;
     padding:30px 20px;
-    
 }
 .matchinfo{
     display:flex;
